--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Homeworks</title>
 </head>
 <body>
-    <a href="./module 1-2/">module 1-2</a>
-    <a href="./module 3/">module 3</a>
+    <p>HTML/CSS</p>
+    <a href="HTML-CSS/module 1-2/index.html">module 1-2</a> <br>
+    <a href="HTML-CSS/module 3/index.html">module 3</a> <br>
 </body>
 </html>
