--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <p>HTML/CSS</p>
     <a href="HTML-CSS/module 1-2/index.html">module 1-2</a> <br>
     <a href="HTML-CSS/module 3/index.html">module 3</a> <br>
+    <a href="HTML-CSS/module 4/index.html">module 4</a> <br>
 </body>
 </html>
