--- a/HTML-CSS/module 4/index.html
+++ b/HTML-CSS/module 4/index.html
@@ -9,7 +9,7 @@
 </head>
 <body class="wrapper">
     <header class="header-wrp">
-        <div class="header-content">
+        <div class="header-content clearfix">
             <div class="logo">MART</div>
             <ul class="menu clearfix">
                 <li class="menu-item item-1"><a href="#" class="item-link">CONTACT US</a></li>
