--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Homeworks</title>
+    <title>Document</title>
 </head>
 <body>
-    <p>HTML/CSS</p>
-    <a href="HTML-CSS/module 1-2/index.html">module 1-2</a> <br>
-    <a href="HTML-CSS/module 3/index.html">module 3</a> <br>
-    <a href="HTML-CSS/module 4/index.html">module 4</a> <br>
+    <h2>HTML-CSS Honeworks</h2>
+    <a href="HTML-CSS/module 1-2/index.html">module 1-2</a>
+    <a href="HTML-CSS/module 3/index.html">module 3</a>
+    <a href="HTML-CSS/module 4/index.html">module 4</a>
+    <a href="HTML-CSS/module 5/index.html">module 5</a>
 </body>
 </html>
