changes in 5 hw

--- a/HTML-CSS/module 5/index.html
+++ b/HTML-CSS/module 5/index.html
@@ -26,12 +26,15 @@
             <div class="slider-block">
                 <img class="slider-image" src="image/image1.png">
             </div>
-            <button class="slider-button left-button"> <img src="image/left-btn-icon.png" alt=""> </button>
-            <button class="slider-button right-button"> <img src="image/right-btn-icon.png" alt=""> </button>
-            <div class="slide-text">
-                <h3 class="slide-name">AFFORDABLE PARIS TOURS</h3>
-                <h4 class="slide-description">CITY TOURS/TOUR TICKETS/TOUR GUIDES</h4>
+            <div class="slider-container">
+                <button class="slider-button left-button"> <img src="image/left-btn-icon.png" alt=""> </button>
+                <button class="slider-button right-button"> <img src="image/right-btn-icon.png" alt=""> </button>
+                <div class="slide-text">
+                    <h3 class="slide-name">AFFORDABLE PARIS TOURS</h3>
+                    <h4 class="slide-description">CITY TOURS/TOUR TICKETS/TOUR GUIDES</h4>
+                </div>  
             </div>
+
         </section>
         <section class="product-gallery clearfix">
             <h1 class="gallery-name">NEW COLLECTION</h1>
