--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>HTML-CSS Honeworks</h2>
+    <h2>HTML-CSS Homeworks</h2>
     <a href="HTML-CSS/module 1-2/index.html">module 1-2</a>
     <a href="HTML-CSS/module 3/index.html">module 3</a>
     <a href="HTML-CSS/module 4/index.html">module 4</a>
     <a href="HTML-CSS/module 5/index.html">module 5</a>
+    <a href="HTML-CSS/module 6/index.html">module 6</a>
 </body>
 </html>
