--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <a href="HTML-CSS/module 4/index.html">module 4</a>
     <a href="HTML-CSS/module 5/index.html">module 5</a>
     <a href="HTML-CSS/module 6/index.html">module 6</a>
+    <a href="HTML-CSS/module 7/index.html">module 7</a>
 </body>
 </html>
