--- a/HTML-CSS/module 7/index.html
+++ b/HTML-CSS/module 7/index.html
@@ -84,13 +84,7 @@
                             placeholder="subject *">
                     </div>
                     <div class="contact-textarea-wrp">
-                        <textarea 
-                            class="contact-textarea" 
-                            name="body" 
-                            cols="30" rows="10"  
-                            placeholder="Your Message *" 
-                            required>
-                        </textarea> 
+                        <textarea class="contact-textarea" name="body" cols="30" rows="10" placeholder="Your Message *" required></textarea> 
                     </div>
                 </div>    
                 <button class="contact-submit" type="submit">send message</button>
