--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
     <a href="HTML-CSS/module 5/index.html">module 5</a>
     <a href="HTML-CSS/module 6/index.html">module 6</a>
     <a href="HTML-CSS/module 7/index.html">module 7</a>
+    <a href="HTML-CSS/module 8/index.html">module 8</a>
 </body>
 </html>
