--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
     <a href="HTML-CSS/module 6/index.html">module 6</a>
     <a href="HTML-CSS/module 7/index.html">module 7</a>
     <a href="HTML-CSS/module 8/index.html">module 8</a>
+    <a href="HTML-CSS/module 9/index.html">module 9</a>
 </body>
 </html>
