--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
     <a href="HTML-CSS/module 7/index.html">module 7</a>
     <a href="HTML-CSS/module 8/index.html">module 8</a>
     <a href="HTML-CSS/module 9/index.html">module 9</a>
+    <a href="HTML-CSS/module 10/index.html">module 10</a>
 </body>
 </html>
